force-app/main/default/objects/Pickup__c/Pickup__c.object-meta.xml
<CustomObject>
    <description>Add this to a location when you do item pickups</description>
    <label>Pickup</label>
    <nameField>
        <label>Pickup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pickups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>