force-app/main/default/objects/Pickup__c/fields/Dollar_Value_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Value_of_Items__c</fullName>
    <formula>Value_of_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value of Items ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>