force-app/main/default/objects/Pickup__c/fields/Donation_Location__c.field-meta.xml
<CustomField>
    <fullName>Donation_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donation Location</label>
    <referenceTo>Donation_Location__c</referenceTo>
    <relationshipName>Pickup_Sllips</relationshipName>
    <type>Lookup</type>
</CustomField>