force-app/main/default/objects/Pickup__c/fields/Gear_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Gear_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person picking up items from the donation location.</description>
    <label>Gear Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>