force-app/main/default/objects/Pickup__c/fields/Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Line_Items__c</fullName>
    <label># Line Items</label>
    <summaryForeignKey>Pickup_Line_Item__c.Pickup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>