force-app/main/default/objects/Pickup__c/fields/Num_Items__c.field-meta.xml
<CustomField>
    <fullName>Num_Items__c</fullName>
    <label># Items</label>
    <summarizedField>Pickup_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Pickup_Line_Item__c.Pickup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>