force-app/main/default/objects/Pickup__c/fields/Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Pickup Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>