force-app/main/default/objects/Pickup__c/fields/Pickup_Status__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Status__c</fullName>
    <label>Pickup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>In Inventory</fullName>
            </value>
            <value>
                <fullName>Historical - Not In Inventory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>