force-app/main/default/objects/Pickup__c/fields/Submit_to_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit to Inventory</label>
    <type>Checkbox</type>
</CustomField>