force-app/main/default/objects/Pickup__c/fields/Value_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Items__c</fullName>
    <label>Value of Items</label>
    <summarizedField>Pickup_Line_Item__c.Value__c</summarizedField>
    <summaryForeignKey>Pickup_Line_Item__c.Pickup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>