force-app/main/default/objects/Pickup__c/fields/Weight_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Weight_of_Items__c</fullName>
    <label>Weight of Items (lbs)</label>
    <summarizedField>Pickup_Line_Item__c.Weight__c</summarizedField>
    <summaryForeignKey>Pickup_Line_Item__c.Pickup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>