force-app/main/default/objects/Pickup__c/validationRules/Pickup_Donation_Location_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Pickup_Donation_Location_Required</fullName>
    <active>true</active>
    <description>Donation Location field is required.</description>
    <errorConditionFormula>ISBLANK( Gear_Coordinator__c )</errorConditionFormula>
    <errorDisplayField>Donation_Location__c</errorDisplayField>
    <errorMessage>Donation Location is required.</errorMessage>
</ValidationRule>