force-app/main/default/objects/Pickup__c/validationRules/Pickup_Gear_Coordinator_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Pickup_Gear_Coordinator_Required</fullName>
    <active>true</active>
    <description>Gear Coordinator field required</description>
    <errorConditionFormula>ISBLANK(Gear_Coordinator__c)</errorConditionFormula>
    <errorDisplayField>Gear_Coordinator__c</errorDisplayField>
    <errorMessage>Gear Coordinator is required.</errorMessage>
</ValidationRule>