force-app/main/default/objects/Pickup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pickup_Date__c</columns>
    <columns>Gear_Coordinator__c</columns>
    <columns>Num_Items__c</columns>
    <columns>Value_of_Items__c</columns>
    <columns>Weight_of_Items__c</columns>
    <columns>Pickup_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>