force-app/main/default/objects/Pickup__c/listViews/All_Pickups.listView-meta.xml
<ListView>
    <fullName>All_Pickups</fullName>
    <columns>NAME</columns>
    <columns>Num_Items__c</columns>
    <columns>Value_of_Items__c</columns>
    <columns>Weight_of_Items__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pickups</label>
</ListView>